--- a/laundry.html
+++ b/laundry.html
@@ -11,7 +11,7 @@ http://demos.jquerymobile.com/1.4.4/theme-default/
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.4/jquery.mobile-1.4.4.min.css" />
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.4.4/jquery.mobile-1.4.4.min.js"></script>
-    <script src="js/sorting.js"></script>
+    <script src="js/laundry.js"></script>
 
     <style>
         .noshadow * {
@@ -48,25 +48,25 @@ http://demos.jquerymobile.com/1.4.4/theme-default/
         <!-- Washers -->
         <h3 style="text-align: center;">Washers</h3>
         <div class="ui-grid-c">
-            <div id="washer-1" class="ui-block-a"><div class="ui-bar ui-bar-a" style="height:100px">
+            <div class="ui-block-a"><div id="washer-1" class="ui-bar ui-bar-a washer" style="height:100px">
                 Washer 1<hr>
                 Claire Customer <br>
                 <br>
                 <span style="float: right;font-size: smaller">20m 37s remaining...</span>
             </div></div>
-            <div id="washer-2" class="ui-block-b"><div class="ui-bar ui-bar-a" style="height:100px">
+            <div class="ui-block-b washer"><div id="washer-2" class="ui-bar ui-bar-a washer" style="height:100px">
                 Washer 2<hr>
                 Greg Granville <br>
                 <br>
                 <span style="float: right;font-size: smaller;color: green">Completed at 10:12 AM</span>
             </div></div>
-            <div id="washer-3" class="ui-block-c"><div class="ui-bar ui-bar-a" style="height:100px">
+            <div class="ui-block-c washer"><div id="washer-3" class="ui-bar ui-bar-a washer" style="height:100px">
                 Washer 3<hr>
                 <br>
                 <br>
                 <span style="float: right;font-size: smaller">Empty</span>
             </div></div>
-            <div id="washer-4" class="ui-block-d"><div class="ui-bar ui-bar-a" style="height:100px">
+            <div class="ui-block-d"><div id="washer-4" class="ui-bar ui-bar-a washer" style="height:100px">
                 Washer 4<hr>
                 <br>
                 <br>
