--- a/theme-default.html
+++ b/theme-default.html
@@ -2,6 +2,20 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+<style>
+  body {background-color:#CEF6F5}
+  h1   {color:black}
+  p    {color:black}
+</style>
+</head>
+
+<body>
+  <h1>This is a heading</h1>
+  <p>This is a paragraph.</p>
+</body>
+
+</html>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Default theme - jQuery Mobile Demos</title>
