--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@ http://demos.jquerymobile.com/1.4.4/theme-default/
     </style>
 </head>
 <body>
-<div data-role="page" id="testpage">
+<div data-role="page" id="login_page">
 
     <!-- Header and Navigation Bar -->
     <div data-role="header">
@@ -62,7 +62,7 @@ http://demos.jquerymobile.com/1.4.4/theme-default/
             </div>
 
             <!-- Login Button -->
-            <input type="submit" id="login-submit-btn" value="Login">
+            <input type="submit" id="login-submit-btn" value="login">
         </form>
     </div><!-- /content -->
 
