--- a/sorting.html
+++ b/sorting.html
@@ -57,9 +57,17 @@ http://demos.jquerymobile.com/1.4.4/theme-default/
 
             <!-- Card associated -->
             <div class="ui-field-contain">
-                <label for="slider-id-num">ID Number:</label>
-                <input type="range" name="slider-id-num" id="slider-id-num" value="1" min="1" max="15" data-highlight="true">
-            </div>
+                <label for="slider-id-num">Card Color:</label>
+                <!-- <input type="range" name="slider-id-num" id="slider-id-num" value="1" min="1" max="15" data-highlight="true"> -->
+                <select name="select-choice-1" id="select-choice-1">
+                    <option value="red">Red</option>
+                    <option value="orange">Orange</option>
+                    <option value="yellow">Yellow</option>
+                    <option value="green">Green</option>
+                    <option value="blue">Blue</option>
+                    <option value="purple">Purple</option>
+                </select>
+            </div> 
 
             <br> <!-- Break up the form -->
 
